FIX: Prevent ever-extending poll breakdown results

--- a/plugins/poll/assets/stylesheets/common/poll-breakdown.scss
+++ b/plugins/poll/assets/stylesheets/common/poll-breakdown.scss
@@ -108,6 +108,7 @@
   justify-content: flex-end;
   margin-top: 1rem;
   position: relative;
+  max-height: 50vh;
 }
 
 .poll-breakdown-chart-label {
